Integration tests
This commit contains tests for
  - OIDCLoginApiController
  - OIDCLogoutApiController
  - OIDCCodeExchangeApiController

Tests for the UserInfoApiController should be added later (including
testing of refreshing the user tokens).